fixing scheduler z-index

--- a/src/files/website/css/main.css
+++ b/src/files/website/css/main.css
@@ -129,7 +129,7 @@ pre {
   top: 0;
   right: 0;
   border: 0;
-  z-index: 4;
+  z-index: 404;
 }
 
 
@@ -143,6 +143,12 @@ pre {
   -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, .25);
   -moz-box-shadow: 0 2px 3px rgba(0,0,0,.25);
   box-shadow: 0 2px 3px rgba(0, 0, 0, .25);
+  *z-index: 402;
+}
+
+.navbar-fixed-top,
+.navbar-fixed-bottom {
+  z-index: 403;
 }
 
 .navbar-inverse .navbar-inner {
